--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,12 @@
 body {
   margin: 0;
   padding: 0;
+  width: 100vw;
+  height: 100vh;
   font-family: sans-serif;
   background-color: black;
 }
+
 
 /* Cta section */
 
