--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,11 +1,28 @@
+html{
+  width: 100%;
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   font-family: sans-serif;
   background-color: black;
+  overflow-x: hidden;
+  box-sizing: border-box;
 }
+
+div.App{
+  display:flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+ 
+  
+}
+
 
 
 /* Cta section */
