--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,11 +7,13 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   font-family: sans-serif;
   background-color: black;
   overflow-x: hidden;
   box-sizing: border-box;
+  display:flex; 
+  flex-direction:column
 }
 
 div.App{
