--- a/client/src/components/newsfeed/newsfeed.css
+++ b/client/src/components/newsfeed/newsfeed.css
@@ -68,6 +68,10 @@
 }
 
 /* Card and Cards*/
+
+.card {
+    box-shadow: 0px 15px 10px 10px rgba(0, 0, 0, 0.4);
+}
 .card-div {
     margin-top: 15px;  
 }
