--- a/client/src/components/profile/Profile.css
+++ b/client/src/components/profile/Profile.css
@@ -71,7 +71,7 @@
 
 .card-help {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
-    max-width: 400px;
+    /* max-width: 400px; */
     margin: 10px;
     background: #F2F2F2;
     font-size: .8em;
@@ -80,7 +80,7 @@
 
 .card-comment {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
-    max-width: 400px;
+    /* max-width: 400px; */
     margin: 10px;
     background: #F2F2F2;
     font-size: .8em;
@@ -91,6 +91,7 @@
     display: flex;
     flex-direction: column;
     border-color: white;
+    width: 60%;
 }
 
 .form-comment input {
