--- a/client/src/components/profile/Profile.css
+++ b/client/src/components/profile/Profile.css
@@ -28,10 +28,22 @@
 }
 
 .title-help {
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 28px;
+    line-height: 38px;
     color: #0D7E6A;
-    font-size: 16px;
-    line-height: 20px;
     margin-top: 60px;
+}
+
+.help-description {
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 30px;
+    color: #333333;
 }
 
 .help {
@@ -75,7 +87,7 @@
     margin: 10px;
     background: #F2F2F2;
     font-size: .8em;
-    padding: 10px;
+    padding: 30px;
 }
 
 .card-comment {
@@ -108,9 +120,8 @@
     display: flex;
     flex-direction: row;
     margin-left: 8%;
-    margin-top: 8%;
+    margin-right: 8%;
     padding: 10px;
-    align-items: center;
     justify-content: center;
 }
 
@@ -140,4 +151,40 @@
     float: right;
     color: #333333;
     margin: 20px 0;
+}
+
+/* comment */
+
+.comment-box {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+    /* max-width: 400px; */
+    margin: 10px;
+    background: #F2F2F2;
+    font-size: .8em;
+    padding: 30px;
+}
+
+.comment-up {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.comment-user-name {
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 30px;
+    color: #0D7E6A;
+}
+
+.comment-text {
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 30px;
+    color: #333333;
+
 }
