added media queries

--- a/client/src/components/profile/Profile.css
+++ b/client/src/components/profile/Profile.css
@@ -153,15 +153,13 @@
     .rowC {
         display: flex;
         flex-direction: column;
-        margin-left: 8%;
+        /* margin-left: 8%; */
         margin-top: 20%;
         padding: 10px;
         align-items: center;
         justify-content: center;
     }
+    .help-comment {
+        width: 100%;
+    }
 }
-
-
-/* LANDSCAPE */
-
-@media (orientation: landscape) {}
