--- a/client/src/components/profile/Profile.css
+++ b/client/src/components/profile/Profile.css
@@ -106,14 +106,12 @@
     width: 60%;
 }
 
-.form-comment input {
+.form-comment textarea {
     width: 100%;
-    height: 40px;
     font-size: 1em;
-}
-
-.form-comment input[type=text] {
     border: 0 solid #F2F2F2;
+    padding: 5px;
+    outline: none;
 }
 
 .rowC {
@@ -158,6 +156,7 @@
 .comment-box {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
     /* max-width: 400px; */
+    word-wrap:break-word;
     margin: 10px;
     background: #F2F2F2;
     font-size: .8em;
