--- a/client/src/components/profile/Profile.css
+++ b/client/src/components/profile/Profile.css
@@ -1,196 +1,198 @@
 *,
- ::after,
- ::before {
-    box-sizing: border-box;
+::after,
+::before {
+	box-sizing: border-box;
 }
 
 .card-profile {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
-    max-width: 300px;
-    margin: 10px;
-    background: #F2F2F2;
-    font-size: .8em;
-    text-align: center;
-    padding: 10px
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+	max-width: 300px;
+	margin: 10px;
+	background: #f2f2f2;
+	font-size: 0.8em;
+	text-align: center;
+	padding: 10px;
 }
 
 .title-name {
-    color: #0D7E6A;
-    font-size: 18px;
-    line-height: 35px;
+	color: #0d7e6a;
+	font-size: 18px;
+	line-height: 35px;
 }
 
 .title-about {
-    color: #0D7E6A;
-    font-size: 18px;
-    line-height: 35px;
-    border-bottom: 2px solid #FCA73D;
+	color: #0d7e6a;
+	font-size: 18px;
+	line-height: 35px;
+	border-bottom: 2px solid #fca73d;
 }
 
 .title-help {
-    font-family: Open Sans;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 28px;
-    line-height: 38px;
-    color: #0D7E6A;
-    margin-top: 60px;
+	font-family: Open Sans;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 28px;
+	line-height: 38px;
+	color: #0d7e6a;
+	margin-top: 60px;
 }
 
 .help-description {
-    font-family: Open Sans;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 30px;
-    color: #333333;
+	font-family: Open Sans;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 18px;
+	line-height: 30px;
+	color: #333333;
 }
 
 .help {
-    color: #CC0A0A;
+	color: #cc0a0a;
 }
 
 .icon {
-    text-align: center;
-    color: #D8D8D8;
-    font-size: 0.9em;
-    margin-bottom: 2px;
+	text-align: center;
+	color: #d8d8d8;
+	font-size: 0.9em;
+	margin-bottom: 2px;
 }
 
 .bio-icon {
-    /*
+	/*
     margin-bottom: 2px;
     left: 545px;
     top: 498px;
     border-radius: 4px;
     display: inline-block;
     float: left; */
-    background: #F2F2F2;
-    font-size: 1.5em;
-    color: #4f4f4f;
-    width: 45px;
-    height: 45px;
-    text-align: center;
+	background: #f2f2f2;
+	font-size: 1.5em;
+	color: #4f4f4f;
+	width: 45px;
+	height: 45px;
+	text-align: center;
 }
 
 .bio-h2 {
-    font-size: 1em;
-    font-weight: 400;
-    font-style: italic;
-    color: #BDBDBD;
-    /* display: inline-block; */
+	font-size: 1em;
+	font-weight: 400;
+	font-style: italic;
+	color: #bdbdbd;
+	/* display: inline-block; */
 }
 
 .card-help {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
-    /* max-width: 400px; */
-    margin: 10px;
-    background: #F2F2F2;
-    font-size: .8em;
-    padding: 30px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+	/* max-width: 400px; */
+	margin: 10px;
+	background: #f2f2f2;
+	font-size: 0.8em;
+	padding: 30px;
+	word-break: break-word;
 }
 
 .card-comment {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
-    /* max-width: 400px; */
-    margin: 10px;
-    background: #F2F2F2;
-    font-size: .8em;
-    padding: 10px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+	/* max-width: 400px; */
+	margin: 10px;
+	background: #f2f2f2;
+	font-size: 0.8em;
+	padding: 10px;
 }
 
 .help-comment {
-    display: flex;
-    flex-direction: column;
-    border-color: white;
-    width: 60%;
+	display: flex;
+	flex-direction: column;
+	border-color: white;
+	width: 60%;
 }
 
 .form-comment textarea {
-    width: 100%;
-    font-size: 1em;
-    border: 0 solid #F2F2F2;
-    padding: 5px;
-    outline: none;
+	width: 100%;
+	font-size: 1em;
+	border: 0 solid #f2f2f2;
+	padding: 5px;
+	outline: none;
+	resize: unset;
 }
 
 .rowC {
-    display: flex;
-    flex-direction: row;
-    margin-left: 8%;
-    margin-right: 8%;
-    padding: 10px;
-    justify-content: center;
+	display: flex;
+	flex-direction: row;
+	margin-left: 8%;
+	margin-right: 8%;
+	padding: 10px;
+	justify-content: center;
 }
 
 .colR {
-    /* display: flex; */
-    flex-direction: column;
-    display: block;
-    float: left;
-    padding-left: 20px;
-    /* align-items: left; */
+	/* display: flex; */
+	flex-direction: column;
+	display: block;
+	float: left;
+	padding-left: 20px;
+	/* align-items: left; */
 }
 
 .clearfix::after {
-    content: '';
-    clear: both;
-    display: table;
-    /* overflow: auto; */
+	content: '';
+	clear: both;
+	display: table;
+	/* overflow: auto; */
 }
 
 .left {
-    float: left;
-    color: #333333;
-    margin: 20px 0;
+	float: left;
+	color: #333333;
+	margin: 20px 0;
 }
 
 .right {
-    float: right;
-    color: #333333;
-    margin: 20px 0;
+	float: right;
+	color: #333333;
+	margin: 20px 0;
 }
 
 /* comment */
 
 .comment-box {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
-    /* max-width: 400px; */
-    word-wrap:break-word;
-    margin: 10px;
-    background: #F2F2F2;
-    font-size: .8em;
-    padding: 30px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+	/* max-width: 400px; */
+	word-wrap: break-word;
+	margin: 10px;
+	background: #f2f2f2;
+	font-size: 0.8em;
+	padding: 30px;
 }
 
 .comment-up {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
 }
 
 .comment-user-name {
-    font-family: Open Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 20px;
-    line-height: 30px;
-    color: #0D7E6A;
+	font-family: Open Sans;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 20px;
+	line-height: 30px;
+	color: #0d7e6a;
 }
 
 .link:hover {
-    text-decoration-line: none;
+	text-decoration-line: none;
 }
 
 .comment-user-name:hover {
-    color: #FCA73D;
+	color: #fca73d;
 }
 
 .comment-text {
-    font-family: Open Sans;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 30px;
-    color: #333333;
+	font-family: Open Sans;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 30px;
+	color: #333333;
 }
