positioning footer and backlink

--- a/client/src/components/footer/Footer.css
+++ b/client/src/components/footer/Footer.css
@@ -5,7 +5,8 @@ html, body {
 .footer-outer {
   height: 12vh;
   background-color: #397e6b;
-  width: vw;
+  width: 100vw;
+margin-bottom: 0;
 }
 
 .footer-outer a {
