--- a/client/src/components/backlink/Backlink.css
+++ b/client/src/components/backlink/Backlink.css
@@ -1,6 +1,18 @@
 .backlink {
   position: absolute;
   top: 20px;
-  padding-top:100px;
+  padding-top:90px;
+  margin-bottom: 50px;
   font-size: 0.7em;
+}
+
+/* MEDIA QUERIES */
+
+@media screen and (max-width: 600px) {
+    .backlink {
+  /* top: 40px; */
+    padding-top:100px;
+
+
+    }
 }
