--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,9 @@
 .App {
   text-align: center;
-   margin: 0;
+  margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
   margin-bottom: -7em
 }
 
