--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,7 +4,9 @@
   padding: 0;
   width: 100%;
   height: 100%;
-  margin-bottom: -7em
+  min-height: 100%;
+  position: relative;
+  /* margin-bottom: -7em */
 }
 
 .App-logo {
