--- a/client/src/components/newsfeed/newsfeed.css
+++ b/client/src/components/newsfeed/newsfeed.css
@@ -123,6 +123,23 @@
     cursor: pointer;
 }
 
+.mark {
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 27px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #FFFFFF;
+    background: #FCA73D;
+    border-radius: 100px;
+}
+
+.icon-done {
+    font-size: 18px;
+    margin-left: 5px;
+}
+
 /* Portrait phones and smaller */
 @media (max-width: 575px) {
     
@@ -157,7 +174,7 @@
 
     
     .search-title {
-        height: 73px;
+        height: 60px;
         font-size: 25px;
         line-height: 34px;
     }
@@ -171,6 +188,11 @@
     }
 
     /* Card */
+
+    .card-wrap {
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
 
     .card-name {
         font-size: 17px;
@@ -229,7 +251,7 @@
 
     .search {
         background: #0D7E6A;
-        height: 100px;
+        height: 80px;
     }
 
     .search-title {
@@ -254,6 +276,8 @@
     .card-wrap {
         display: flex;
         flex-wrap: wrap;
+        margin-top: 30px;
+        margin-bottom: 30px;
     }
 
     .card-div {
@@ -290,6 +314,8 @@
     .card-wrap {
         display: flex;
         flex-wrap: wrap;
+        margin-top: 30px;
+        margin-bottom: 30px;
     }
 
     .card-div {
@@ -331,6 +357,11 @@
         width: 30%;
         height: 25%;
         min-width: 200px;
+    }
+
+    .card-wrap {
+        margin-top: 30px;
+        margin-bottom: 30px;
     }
 }
 
