--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,9 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  height:100%;
+}
+
 .App {
   text-align: center;
   margin: 0;
@@ -6,6 +12,7 @@
   height: 100%;
   min-height: 100%;
   position: relative;
+  /* display:flex; */
   /* margin-bottom: -7em */
 }
 
@@ -32,4 +39,12 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+/* ? */
+
+ .App:after {
+  content:'';
+  display: block;
+  height: 50px; 
 }
