--- a/client/src/components/newsfeed/newsfeed.css
+++ b/client/src/components/newsfeed/newsfeed.css
@@ -254,6 +254,7 @@
     .card-wrap {
         display: flex;
         flex-wrap: wrap;
+
     }
 
     .card-div {
@@ -290,6 +291,7 @@
     .card-wrap {
         display: flex;
         flex-wrap: wrap;
+        min-height: calc(100vh-50px);
     }
 
     .card-div {
@@ -305,6 +307,10 @@
     .card-wrap {
         display: flex;
         flex-wrap: wrap;
+        height: 100%;
+        min-height: calc(100vh-70px);
+        margin-bottom: 50px;
+
     }
 
     .card-div {
