--- a/client/src/components/profile/Profile.css
+++ b/client/src/components/profile/Profile.css
@@ -79,7 +79,7 @@
     margin: 10px;
     background: #f2f2f2;
 	font-size: 0.8em;
-	padding: 30px;
+	padding: 10px;
 	word-break: break-word;
     border-radius: 2px;
 }
@@ -124,6 +124,8 @@
     padding: 10px;
     align-items: center;
     justify-content: center;
+    min-height: calc(100vh-70px);
+    padding-bottom: 70px;
     /* min-height: 2 */
 }
 
@@ -135,6 +137,8 @@
     padding: 10px;
     align-items: center;
     justify-content: center;
+    min-height: calc(100vh-190px);
+    padding-bottom: 50px;
 }
 
 .colR {
@@ -185,7 +189,7 @@
 	font-style: normal;
 	font-weight: bold;
 	font-size: 20px;
-	line-height: 30px;
+	line-height: 28px;
 	color: #0d7e6a;
 }
 
@@ -214,7 +218,6 @@
         display: block !important;
         margin: auto;
         min-width: 200px;
-
     }
     .rowC {
         display: flex;
@@ -224,7 +227,8 @@
         align-items: center;
         justify-content: center;
         padding-bottom: 300px;
-        min-height: calc(100vh-50px);
+        max-height: calc(100vh-70px);
+       
     }
 
     .rowMore {
@@ -234,7 +238,6 @@
         margin-right: 10px;
         align-items: center;
         justify-content: center;
-        /* padding-bottom: calc(100vh-50px); */
         padding-bottom: 500px;
         min-height: calc(100vh-50px);
     }
@@ -253,11 +256,24 @@
     .card-comment  {
         margin:auto;
         min-width: 200px;
+        max-width: 320px;
+        min-width: calc(100vh-70px);
+width:100%
+
     }
     .card-help  {
         margin:auto;
         margin-bottom: 10px;
         min-width: 200px;
+    }
+    .comment-box:lastchild
+     {
+      margin:auto;
+        margin-bottom: 10px;
+        min-width: 200px;
+        padding-bottom:70px;
+        max-width: 320px;
+
     }
 }
 
@@ -276,6 +292,24 @@
          margin-top: 250px;
         padding-bottom: 200px;
     }
+
+     .card-comment  {
+        margin:auto;
+        min-width: 200px;
+        max-width: 320px;
+        min-width: calc(100vh-70px);
+
+    }
+  
+    .comment-box:lastchild
+     {
+      margin:auto;
+        margin-bottom: 10px;
+        min-width: 200px;
+        max-width: 320px;
+        padding-bottom:70px;
+
+    }
  }
 
   @media (orientation: landscape) and (max-width: 600px){
@@ -285,6 +319,46 @@
     .card-help {
         margin-top: -160px;
     }
+     .rowC {
+        display: flex;
+        flex-direction: row;
+         margin-top: 250px;
+        padding-bottom: 200px;
+    }
+     .rowMore {
+        display: flex;
+        flex-direction: column;
+         margin-top:400px;
+        padding-bottom: 300px;
+    }
+       .card-help {
+        margin-top: 10px;
+    }
+ }
+
+   @media (orientation: landscape) and (min-width: 620px){
+    .card-profile {
+        /* margin-top: -160px; */
+    }
+    .card-help {
+        /* margin-top: -160px; */
+    }
+     .rowC {
+        display: flex;
+        flex-direction: row;
+         margin-top: 250px;
+        padding-bottom: 300px;
+     }
+
+     .rowMore {
+        display: flex;
+        flex-direction: column;
+         /* margin-top:200px; */
+        padding-bottom: 400px;
+    }
+       /* .card-help {
+        margin-top: 10px;
+    } */
  }
 
 /* MEDIA QUERIES - EXTRA LARGE DEVICES */
@@ -292,5 +366,39 @@
 @media screen and (min-width: 576px) {
     .rowC , .rowMore{
         height: 100%;
+    }
+
+   .column {
+        min-width: 200px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+ 
+   .column {
+        min-width: 200px;
+    }
+
+    .rowC , .rowMore{
+        height: 80vh;
+        width: 80vw;
+    }
+
+       .card-comment  {
+        margin:auto;
+        min-width: 200px;
+        max-width: 320px;
+        min-width: calc(100vh-70px);
+
+    }
+  
+    .comment-box:lastchild
+     {
+      margin:auto;
+        margin-bottom: 10px;
+        min-width: 200px;
+        max-width: 320px;
+        padding-bottom:70px;
+
     }
 }
