--- a/client/src/components/newsfeed/newsfeed.css
+++ b/client/src/components/newsfeed/newsfeed.css
@@ -255,7 +255,7 @@
     }
 
     .search-title {
-        font-size: 36px;
+        font-size: 27px;
         line-height: 49px;
         display: flex;
         justify-content: left;
@@ -263,7 +263,7 @@
     }
 
     .search-input {
-        padding: 15px 20px 15px;
+        padding: 15px 50px 15px 10px;
     }
 
     .search-form {
