--- a/client/src/components/footer/Footer.css
+++ b/client/src/components/footer/Footer.css
@@ -1,7 +1,8 @@
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
-  height:100%;
+  height: 100%;
 }
 
 .footer-outer {
@@ -10,13 +11,13 @@ html, body {
   width: 100vw;
   margin-bottom: 0;
   /* margin-top: -7em; */
-  margin-top: 7em;
+  margin-top: 25em;
   margin-right: 2em;
   /* overflow:hidden; */
-      /* visibility: visible; */
+  /* visibility: visible; */
 }
 
- /* .footer-outer:after {
+/* .footer-outer:after {
   clear:both;
 }
 
@@ -43,44 +44,40 @@ display:table;
 }
 
 .footer-list li img {
-  height: 3em;
-  width: 3em;
+  height: 4em;
+  width: 4em;
 }
 
 /* MEDIA QUERIES */
 
-@media (max-width: 575.98px) { 
+@media (max-width: 575.98px) {
+  .footer-outer {
+    height: 19vh;
+  }
 
-.footer-outer {
-  height: 19vh;
+  .footer-list {
+    padding-left: 2px;
+  }
 }
 
-.footer-list {
-  padding-left: 2px;
-}
- }
+@media (min-width: 600px) {
+  /* .footer-outer {
+    /* height: 19vh; */
+  /* margin-top: auto; */
 
- @media (min-width: 600px) { 
-
-.footer-outer {
-  height: 19vh;
-         /* margin-top: auto; */
-
+  .footer-list {
+    padding-left: 2px;
+  }
 }
 
-.footer-list {
-  padding-left: 2px;
+/* LANDSCAPE */
+
+@media (orientation: landscape) {
+  .footer-outer {
+    height: 70px;
+    margin-top: auto;
+    position: relative;
+    clear: both;
+    /* margin-top: -3em;  */
+  }
 }
- }
-
- /* LANDSCAPE */
-
- @media (orientation: landscape) {
-   .footer-outer {
-     height: 70px;
-       margin-top: auto;
-        position: relative;
-clear: both;
-/* margin-top: -3em;  */
-   }
- }
