--- a/client/src/components/profile/Profile.css
+++ b/client/src/components/profile/Profile.css
@@ -282,6 +282,7 @@
     align-items: center;
     justify-content: center;
     padding-bottom: 100px;
+    margin-bottom: -150px;
     max-height: calc(100vh-70px);
   }
 
@@ -413,6 +414,7 @@
   .rowMore {
     display: flex;
     flex-wrap: wrap;
+
     /* padding-top: 100px;
     height: 100%; */
   }
