--- a/client/src/components/newsfeed/newsfeed.css
+++ b/client/src/components/newsfeed/newsfeed.css
@@ -7,7 +7,7 @@
 /* Newsfeed Header */
 
 .header {
-  height: 200px;
+  height: 170px;
   position: relative;
   background-image: url("../../assets/pexels-gustavo-fring.jpg");
   background-position: 50% 50%;
@@ -123,20 +123,20 @@
 }
 
 .mark {
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 27px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    color: #FFFFFF;
-    background: #FCA73D;
-    border-radius: 100px;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 27px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #ffffff;
+  background: #fca73d;
+  border-radius: 100px;
 }
 
 .icon-done {
-    font-size: 18px;
-    margin-left: 5px;
+  font-size: 18px;
+  margin-left: 5px;
 }
 
 /* Portrait phones and smaller */
@@ -170,12 +170,11 @@
 
   /* Search Bar */
 
-    
-    .search-title {
-        height: 60px;
-        font-size: 25px;
-        line-height: 34px;
-    }
+  .search-title {
+    height: 60px;
+    font-size: 25px;
+    line-height: 34px;
+  }
 
   .search-input {
     padding: 15px 50px 15px;
@@ -242,11 +241,11 @@
 
   .search {
     background: #0d7e6a;
-    height: 100px;
+    height: 60px;
   }
 
   .search-title {
-    font-size: 36px;
+    font-size: 26px;
     line-height: 49px;
     display: flex;
     justify-content: left;
