--- a/docs/lp_styles.css
+++ b/docs/lp_styles.css
@@ -56,7 +56,8 @@ body a {
     box-shadow: 0px 1px 8px #e5e5e5;
 }
 
-.navbar-cta:hover, .lp-navbar p:hover, .section-1-left button:hover, .member:hover, span:hover, footer i:hover{
+.navbar-cta:hover, .lp-navbar p:hover, .section-1-left button:hover,
+.member:hover, span:hover, footer i:hover, #lp-section-5 button:hover{
     transform: translateY(-0.2rem);
     cursor: pointer;
 }
@@ -75,7 +76,7 @@ body a {
     line-height: auto;
 }
 
-.section-1-left button {
+.section-1-left button, #lp-section-5 button {
     height: 45px;
     font-size: 1rem;
     font-weight: 550;
@@ -86,6 +87,7 @@ body a {
     box-shadow: 0px 1px 8px #e5e5e5;
     padding-left: 18px;
     padding-right: 18px;
+    letter-spacing: 1px;
 }
 
 .section-1-left p {
@@ -135,13 +137,13 @@ iframe {
     
 }
 
-#lp-section-3 .heading-s3 {
+.heading-s3, .heading-s4 {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.heading-s3 h3 {
+.heading-s3 h3, .heading-s4 h3 {
     background-color: #0d7e6a;
     color: white;
     text-align: center;
@@ -149,6 +151,7 @@ iframe {
     border-radius: 7px;
     font-size: 1.3rem;
     margin-bottom: 50px;
+    letter-spacing: 1px;
 }
 
 .heading-s3 p {
@@ -194,7 +197,8 @@ iframe {
     margin: 100px auto;
 }
 
-.heading-s4 {
+
+/*.heading-s4 {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -208,6 +212,7 @@ iframe {
     border-radius: 7px;
     font-size: 1.3rem;
 }
+*/
 
 .tools-wrapper {
     width: 100%;
@@ -259,6 +264,53 @@ footer .left {
 footer img {
     height: 45px;
 }
+
+#lp-section-5 {
+    background-color: #f2f2f2;
+    padding-top:50px;
+    padding-bottom: 50px;
+}
+
+.heading-s5 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.heading-s5 button {
+    letter-spacing: 1px;
+    
+}
+
+.heading-s5 h3 {
+    background-color: white;
+    color: #0d7e6a;
+    text-align: center;
+    padding: 8px 15px;
+    border-radius: 7px;
+    font-size: 1.3rem;
+    margin-bottom: 50px;
+    letter-spacing: 1px;
+    border: 2px solid #0d7e6a;
+}
+
+#lp-section-5 button {
+    height: 45px;
+    font-size: 1rem;
+    font-weight: 550;
+    border: none;
+    border-radius: 100px;
+    background-color: #fca73d;
+    color: white;
+    box-shadow: 0px 1px 8px #e5e5e5;
+    padding-left: 18px;
+    padding-right: 18px;
+}
+
+#lp-section-5 i {
+    margin-right: 5px;
+}
+
 
 @media (max-width:1500px) {
     .tools-wrapper {
@@ -403,7 +455,8 @@ footer img {
     .navbar-cta {
         height: 36px;
         margin-left: 25px;
-        padding: 0px 15px; 
+        padding: 0px 15px;
+        margin-top: 5px;
     }
 
     .lp-navbar {
@@ -459,8 +512,8 @@ footer img {
     }
 
     .member {
-        margin-top: 20px;
-        min-height: 160px;
+        margin-top: 0px;
+        min-height: 190px;
     }
 
     #lp-section-4 {
@@ -497,5 +550,19 @@ footer img {
     .footer-content img {
         height: 35px;
     }
+
+    #lp-section-5 {
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
+
+    #lp-section-5 button {
+        margin-top: 10px;
+    }
+
+    #lp-section-5 h3 {
+        margin-bottom: 15px;
+    }
+   
     
 }
