added back button and edit button disabled when clicked

--- a/client/src/components/backlink/Backlink.css
+++ b/client/src/components/backlink/Backlink.css
@@ -1,7 +1,6 @@
 .backlink {
-  top: 20px;
-  padding-top: 90px;
-  margin-bottom: 50px;
+  margin-top: 20px;
+  margin-bottom: 20px;
   font-size: 0.7em;
   margin-left: 100px;
 }
