--- a/client/src/components/profile/Profile.css
+++ b/client/src/components/profile/Profile.css
@@ -332,7 +332,7 @@
   .rowC {
     display: flex;
     flex-direction: row;
-    margin-top: 100px;
+    margin-top: auto;
     padding-bottom: 100px;
   }
   .rowMore {
