finishing touches for heroku
Added bootstrap in the profile page

--- a/client/src/components/profile/Profile.css
+++ b/client/src/components/profile/Profile.css
@@ -7,7 +7,8 @@
 .card-profile {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
   max-width: 300px;
-  margin: 10px;
+  margin-top: 100px;
+  margin-left: 170px;
   background: #f2f2f2;
   font-size: 0.8em;
   text-align: center;
@@ -345,7 +346,7 @@
   }
 
   .card-comment {
-    margin: 0.3rem;
+    /* margin: 0.3rem; */
     /* height: 200px; */
     /* min-width: calc(100vw-50px); */
     margin-bottom: 30px;
@@ -437,7 +438,7 @@
   }
 
   .card-comment {
-    margin: 27px;
+    /* margin: 27px; */
     /* width: 100%; */
     /* min-width: calc(100vw-70px); */
     margin-bottom: 30px;
