--- a/client/src/components/backlink/Backlink.css
+++ b/client/src/components/backlink/Backlink.css
@@ -17,7 +17,7 @@
 @media screen and (max-width: 800px) {
   .backlink {
     padding-top: 50px;
-    margin-left: 0;
+    margin-left: 10px;
     margin-bottom: 0;
   }
 }
