--- a/client/src/components/backlink/Backlink.css
+++ b/client/src/components/backlink/Backlink.css
@@ -9,14 +9,16 @@
 
 @media screen and (max-width: 600px) {
   .backlink {
-    padding-top: 50px;
+    padding-top: 10px;
+    padding-bottom: 40px;
     margin-bottom: 0;
   }
 }
 
 @media screen and (max-width: 800px) {
   .backlink {
-    padding-top: 50px;
+    padding-top: 10px;
+    padding-bottom: 40px;
     margin-left: 10px;
     margin-bottom: 0;
   }
