--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,258 +1,258 @@
 html {
-  width: 100%;
-  height: 100%;
+	width: 100%;
+	height: 100%;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100vh;
-  font-family: sans-serif;
-  background-color: black;
-  overflow-x: hidden;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100vh;
+	font-family: sans-serif;
+	background-color: black;
+	overflow-x: hidden;
+	box-sizing: border-box;
+	display: flex;
+	flex-direction: column;
 }
 
 div.App {
-  display: flex;
-  flex-direction: column;
-  width: 100vw;
-  height: 100vh;
+	display: flex;
+	flex-direction: column;
+	width: 100vw;
+	height: 100vh;
 }
 
 /* Cta section */
 
 .cta-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .cta-title {
-  font-family: "Open Sans", sans-serif;
-  font-style: normal;
-  font-weight: bold;
+	font-family: 'Open Sans', sans-serif;
+	font-style: normal;
+	font-weight: bold;
 }
 
 .cta {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
 }
 
 .cta-quote {
-  font-family: Open Sans;
-  font-style: normal;
-  font-weight: 600;
-  text-align: center;
-  width: 90%;
+	font-family: Open Sans;
+	font-style: normal;
+	font-weight: 600;
+	text-align: center;
+	width: 90%;
 }
 
 .cta button {
-  background: #fca73d;
-  color: #ffffff;
-  font-weight: bold;
-  border-radius: 100px;
-  border-style: none;
+	background: #fca73d;
+	color: #ffffff;
+	font-weight: bold;
+	border-radius: 100px;
+	border-style: none;
 }
 
 .cta button:hover {
-  transform: scale(1.1);
-  background: #fca73d;
-  color: #ffffff;
+	transform: scale(1.1);
+	background: #fca73d;
+	color: #ffffff;
 }
 
 /* About us section */
 .row-about h3 {
-  font-family: Open Sans;
-  font-style: normal;
-  font-weight: bold;
-  text-align: center;
-  line-height: 27px;
-  color: #0d7e6a;
+	font-family: Open Sans;
+	font-style: normal;
+	font-weight: bold;
+	text-align: center;
+	line-height: 27px;
+	color: #0d7e6a;
 }
 
 .span1 {
-  color: #fca73d;
+	color: #fca73d;
 }
 
 .span2 {
-  font-weight: bold;
+	font-weight: bold;
 }
 
 /* Tablets and Computer */
 @media (min-width: 576px) {
-  .row-cta {
-    height: 100vh;
-    width: 100vw;
-    position: relative;
-    background-image: url("./assets/pexels-anna-shvets.jpg");
-    background-position: 50% 50%;
-    background-size: cover;
-  }
+	.row-cta {
+		height: 100vh;
+		width: 100vw;
+		position: relative;
+		background-image: url('./assets/pexels-anna-shvets.jpg');
+		background-position: 50% 50%;
+		background-size: cover;
+	}
 
-  .home-img {
-    display: none;
-  }
+	.home-img {
+		display: none;
+	}
 
-  .cta-section {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    justify-content: center;
-  }
+	.cta-section {
+		position: absolute;
+		height: 100%;
+		width: 100%;
+		background: rgba(0, 0, 0, 0.5);
+		justify-content: center;
+	}
 
-  .cta {
-    text-align: center;
-  }
+	.cta {
+		text-align: center;
+	}
 
-  .cta-title {
-    font-size: 60px;
-    line-height: 82px;
-    text-align: center;
-    color: #ffffff;
-  }
+	.cta-title {
+		font-size: 60px;
+		line-height: 82px;
+		text-align: center;
+		color: #ffffff;
+	}
 
-  .cta-quote {
-    font-size: 26px;
-    line-height: 35px;
-    color: #ffffff;
-  }
+	.cta-quote {
+		font-size: 26px;
+		line-height: 35px;
+		color: #ffffff;
+	}
 
-  .cta-quote span {
-    color: #fca73d;
-  }
+	.cta-quote span {
+		color: #fca73d;
+	}
 
-  .cta button {
-    margin-top: 20px;
-    width: 297px;
-    height: 59px;
-  }
+	.cta button {
+		margin-top: 20px;
+		width: 297px;
+		height: 59px;
+	}
 
-  /* About us section */
+	/* About us section */
 
-  .row-about {
-    display: flex;
-    align-items: center;
-    background: white;
-    padding: 50px;
-  }
+	.row-about {
+		display: flex;
+		align-items: center;
+		background: white;
+		padding: 50px;
+	}
 
-  .about-us-img {
-    width: 100%;
-    min-height: 200px;
-    min-width: 200px;
-    height: auto;
-  }
+	.about-us-img {
+		width: 100%;
+		min-height: 200px;
+		min-width: 200px;
+		height: auto;
+	}
 
-  .row-about h3 {
-    font-size: 32px;
-    text-align: left;
-    margin-bottom: 20px;
-  }
+	.row-about h3 {
+		font-size: 32px;
+		text-align: left;
+		margin-bottom: 20px;
+	}
 
-  .row-about p {
-    font-family: Open Sans;
-    font-style: normal;
-    font-size: 20px;
-    line-height: 27px;
-    text-align: left;
-  }
+	.row-about p {
+		font-family: Open Sans;
+		font-style: normal;
+		font-size: 20px;
+		line-height: 27px;
+		text-align: left;
+	}
 }
 
 /* Portrait phones and smaller */
 @media (max-width: 575px) {
-  .home-img-mob {
-    margin: 0;
-    width: 100%;
-    height: auto;
-  }
+	.home-img-mob {
+		margin: 0;
+		width: 100%;
+		height: auto;
+	}
 
-  .cta-section {
-    background: #ffffff;
-    box-shadow: 0px 4px 4px #e5e5e5;
-    border-radius: 15px;
-    padding: 10px;
-  }
+	.cta-section {
+		background: #ffffff;
+		box-shadow: 0px 4px 4px #e5e5e5;
+		border-radius: 15px;
+		padding: 10px;
+	}
 
-  .cta-title {
-    font-size: 28px;
-    line-height: 38px;
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    color: #0d7e6a;
-    padding: 0 15px 0;
-  }
+	.cta-title {
+		font-size: 28px;
+		line-height: 38px;
+		font-weight: bold;
+		display: flex;
+		align-items: center;
+		text-align: center;
+		color: #0d7e6a;
+		padding: 0 15px 0;
+	}
 
-  .cta {
-    padding: 15px;
-    margin: 15px;
-    background: #fff0de;
-    border-radius: 10px;
-  }
+	.cta {
+		padding: 15px;
+		margin: 15px;
+		background: #fff0de;
+		border-radius: 10px;
+	}
 
-  .cta-quote {
-    font-size: 17px;
-    line-height: 23px;
-    color: #fca73d;
-  }
+	.cta-quote {
+		font-size: 17px;
+		line-height: 23px;
+		color: #fca73d;
+	}
 
-  .cta-quote span {
-    color: #0d7e6a;
-  }
+	.cta-quote span {
+		color: #0d7e6a;
+	}
 
-  .cta button {
-    width: 170px;
-    height: 45.5px;
-  }
+	.cta button {
+		width: 170px;
+		height: 45.5px;
+	}
 
-  /* About us section */
-  .row-about {
-    margin: 15px;
-    padding: 10px;
-  }
+	/* About us section */
+	.row-about {
+		margin: 15px;
+		padding: 10px;
+	}
 
-  .about-us-img {
-    margin: 0;
-    width: 100%;
-    height: auto;
-  }
+	.about-us-img {
+		margin: 0;
+		width: 100%;
+		height: auto;
+	}
 
-  .row-about p {
-    font-family: Open Sans;
-    font-style: normal;
-    font-size: 20px;
-    line-height: 27px;
-    text-align: center;
-  }
+	.row-about p {
+		font-family: Open Sans;
+		font-style: normal;
+		font-size: 20px;
+		line-height: 27px;
+		text-align: center;
+	}
 
-  .row-about h3 {
-    font-size: 27px;
-  }
+	.row-about h3 {
+		font-size: 27px;
+	}
 }
 /* Navbar */
 
 .logo {
-  width: 10rem;
-  margin-left: auto 10px;
+	width: 10rem;
+	margin-left: auto 10px;
 }
 
 .brand-name {
-  width: 100px;
-  color: #fca73d;
-  display: inline-block;
+	width: 100px;
+	color: #fca73d;
+	display: inline-block;
 }
 .img-wrapper {
-  display: inline-block;
+	display: inline-block;
 }
 
 .btn-logout {
-  background-color: red;
+	background-color: red;
 }
